# Django_url_shoter

./: Dockerfile  docker-compose.yml  entrypoint.sh  pyproject.toml  readme.md
authnapp/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
authnapp/migrations/: 0001_initial.py
authnapp/templates/authnapp/: base.html  index.html  profile.html  register.html  sign_in.html
config/: settings.py  urls.py
link_shortener/: admin.py  apps.py  forms.py  models.py
link_shortener/migrations/: 0001_initial.py
nginx/: nginx.conf
