[tool.poetry]
name = "django_url_shoter"
version = "0.1.0"
description = "This is a Django test project back"
authors = ["RomanL91 <dev_roman91@mail.ru>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
Django = "3.2.9"
tldextract = "^3.3.1"
django-environ = "^0.9.0"
gunicorn = "^20.1.0"
psycopg2 = "^2.9.3"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
